# Electric_Rust

./: .classpath  .gitignore  .project  Cargo.toml  Construct_Final.apk.idsig  construct_data_v2.json  electric_data_v2.json  run_android.bat  run_android_debug.bat  run_android_release.bat  run_android_release_moto.bat  run_desktop.bat
app/: AndroidManifest.xml  Cargo.toml
app/java/com/antigravity/construct/: BackHandler.java
app/java/com/antigravity/electric/: BackHandler.java
app/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/res/values/: styles.xml
app/src/: android_utils.rs  lib.rs  main.rs
app/ui/: main.slint
app/ui/components/: bottom_bar.slint  editable_value_display.slint  electric_selection_item.slint  gesture_handler.slint  icon_button.slint  inventory_item.slint  key_button.slint  length_chip.slint  lumber_item.slint  numeric_keypad.slint  section_header.slint  selection_item.slint  share_picker.slint  sidebar.slint  sidebar_item.slint  toast.slint  top_bar.slint
app/ui/screens/: base_screen.slint  door_screen.slint  insulation_screen.slint  interior_screen.slint  project_list_screen.slint  roof_screen.slint
crates/app/: AndroidManifest.xml  Cargo.toml
crates/app/res/drawable/: transparent_cursor.xml
crates/app/res/values/: styles.xml
crates/app/src/: android_utils.rs  lib.rs
crates/app/ui/: main.slint
crates/app/ui/components/: inventory_item.slint  numeric_keypad.slint  section_header.slint  share_picker.slint  sidebar.slint  toast.slint  top_bar.slint
crates/app/ui/screens/: base_screen.slint  door_screen.slint  insulation_screen.slint  roof_screen.slint
crates/logic/src/: lib.rs
crates/logic/src/inventory/: material.rs  mod.rs
desktop/: Cargo.toml
