[package]
name = "construct"
version = "2.1.18"
edition = "2021"

[package.metadata.android]
package = "com.antigravity.construct"
label = "Construct"
build_targets = ["aarch64-linux-android"]
apk_name = "Construct"
res = "res"
theme = "@style/ConstructTheme"

[package.metadata.android.signing.release]
path = "C:\\Users\\Joaquin\\.android\\debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"

[dependencies]
slint = { version = "1.15.1", features = ["renderer-skia-opengl", "backend-android-activity-06"] }

tokio = { version = "1", features = ["full"] }
jni = "0.21.1"
ndk-context = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "js"] }

[lib]
name = "construct"
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
slint-build = "1.15.1"
